# lite

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  api.py  app.py  cli.py  config.py  environment.yml  gui.html  gui.py  index.html  index.py  logger.py  main.py  models.py  plot.html  plot.py  pyproject.toml  pyrightconfig.json  requirements-gpu.txt  requirements.txt  settings.py  test.py  ty.toml  ui.html  utils.py
lite/: api.py  app.py  cli.py  gui.py  index.py  logger.py  ui.html
tests/: test_app.py
